# coup

./: .gitignore  LICENSE.md  README.md  game_states.dot  pyproject.toml
.github/workflows/: ci.yml
coup_env/env/: coup_env.py  env.py
docs/: game_states.dot  gen_doc_tables.py
examples/: run.py
scripts/: run.py
src/coup_pettingzoo/env/: action.py  card.py  env.py  player.py  state.py
src/pettingzoo_coup/: coup_v0.py
src/pettingzoo_coup/env/: action.py  card.py  env.py  player.py  state.py  tabulate.py
tests/: common_params.py  test_game_mechanics.py  test_logged_run.py  test_pettingzoo_api.py
